vpc.tf
# VPC
resource "aws_vpc" "fonsah-vpc" {
  cidr_block       = "200.20.0.0/16"
  instance_tenancy = "default"

  tags = {
    Name : "fonsah-vpc"
  }
}

# Internet Gateway
resource "aws_internet_gateway" "fonsah-ig" {
  vpc_id = aws_vpc.fonsah-vpc.id

  tags = {
    Name : "fonsah-internet-gateway"
  }
}

# Subnet
resource "aws_subnet" "fonsah-sn" {
  vpc_id                  = aws_vpc.fonsah-vpc.id
  cidr_block              = "200.20.1.0/24"
  map_public_ip_on_launch = "true"

  tags = {
    Name : "fonsah-subnet"
  }
}

# Route Table
resource "aws_route_table" "fonsah-rt" {
  vpc_id = aws_vpc.fonsah-vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.fonsah-ig.id
  }

  tags = {
    Name : "fonsah-route-table"
  }
}

resource "aws_route_table_association" "fonsah-rt-association" {
  route_table_id = aws_route_table.fonsah-rt.id
  subnet_id      = aws_subnet.fonsah-sn.id
}
